# text-emotion

./: .gitignore  README.md  pyproject.toml
emotion_classification/: main.py
emotion_classification/src/: main.py  multilang_emotion.py  roberta_emotion.ipynb
emotion_classification/src/models/: roberta_train.ipynb  roberta_train.py
emotion_classification/src/roberta_emotion/:  modeling_roberta_emotion.py  configuration_roberta_emotion.py  modeling_roberta_emotion.py
examples/: detect_example.py
models/roberta_emotion/: modeling_roberta_emotion.py  train.py
src/: main.py
src/data/: preprocessing.py
src/emotion/: emotion.py
src/emotion_classification/: multilang_emotion.py
src/emotions_dataset/: emotions_dataset.py
src/models/roberta_emotion/: configuration_roberta_emotion.py  modeling_roberta_emotion.py  train.py
src/text_emotion/: emotion.py
src/text_emotion/utils/: exceptions.py
