[tool.poetry]
name = "emotion-classification"
version = "0.1.0"
description = "Multilanguage Emotion Classification"
authors = ["ma2za <mazzapaolo2019@gmail.com>"]
readme = "README.md"
packages = [{ include = "emotion_classification" }]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.28.1"
torch = "^2.0.0"
fasttext = "^0.9.2"
easynmt = "^2.0.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
