[tool.poetry]
name = "emotion-classification"
version = "0.0.1"
description = "Multilingual Emotion Classification"
authors = ["ma2za <mazzapaolo2019@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "emotion", from = "src" }]

repository = "https://github.com/ma2za/emotion"
homepage = "https://github.com/ma2za/emotion"

keywords = ["emotion", "xlm-roberta", "text-classification", "multilingual"]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
